--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ header.pet-header{
     align-items: center;
     padding: 5px;
 }
+
+.results{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
