--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h3{
     margin-top: 40px;
     padding: 1.5rem;
 }
+h4{
+    color: black;
+
+}
 .descript{
     padding: 2rem;
     margin-left: auto;
@@ -58,10 +62,10 @@ header.site-init{
 
 .form-container{
     background-color: gray;
-    height: 30vh;
     width: 60%;
     margin: 1rem auto;
     border-radius: 1rem;
+    padding: 2rem;
 }
 
 .alert-error{
